[package]
name = "carbon"
version = "0.1.0"
description = "Marketplace for listing virtual items to be lazy minted on purchase."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "carbon"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = {version = "0.26.0", features = ["metadata"]}
solana-program = "^1.15.0"
spl-token = "^3.5.0"
spl-associated-token-account = {version = "^1.1.2", features = ["no-entrypoint"]}
mpl-token-metadata = { version="1.8.3", features = [ "no-entrypoint" ] }